--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
     <title>DreamCSS Example Page</title>
 </head>
 <body>
+    <main>
+        <div class="dr-container">
+            <h1>Heading 1</h1>
+            <h2>Heading 2</h2>
+            <h3>Heading 3</h3>
+            <h4>Heading 4</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, et. Enim cum ipsam cupiditate, praesentium accusantium totam? Accusantium, neque deleniti.</p>
+            <ul>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem ipsum dolor sit amet.</li>
+            </ul>
+        </div>
+    </main>
 </body>
 </html>
