Adds container widths

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>DreamCSS Example Page</title>
 </head>
 <body>
-    <main>
+    <main class="dr-container-sm">
         <div class="dr-container">
             <h1>Heading 1</h1>
             <h2>Heading 2</h2>
