Fixes issue with getting map

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                 <li>Lorem ipsum dolor sit amet.</li>
                 <li>Lorem ipsum dolor sit amet.</li>
             </ul>
+            <ol>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem ipsum dolor sit amet.</li>
+            </ol>
         </div>
 
         <div class="dr-flex">
