--- a/index.html
+++ b/index.html
@@ -8,17 +8,35 @@
 </head>
 <body>
     <main>
-        <div class="dr-container">
+        <header>
+            <h1>Welcome to Dream CSS.</h1>
+            <p>Dream CSS is a lightweight, .... This framework was written and styled by Nathan Templeton, Dominic Corriveau, Alex Galsytan, and Matthew Montgomery.</p>
+        </header>
+        <div>
+            <h4>Headings and paragraphs:</h4>
             <h1>Heading 1</h1>
             <h2>Heading 2</h2>
             <h3>Heading 3</h3>
             <h4>Heading 4</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, et. Enim cum ipsam cupiditate, praesentium accusantium totam? Accusantium, neque deleniti.</p>
+            <p>This is what a paragraph would look like using the dream CSS library.</p>
+            <h4>Unordered list:</h4>
             <ul>
-                <li>Lorem ipsum dolor sit amet.</li>
-                <li>Lorem ipsum dolor sit amet.</li>
-                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Unordered list item</li>
+                <li>Unordered list item</li>
+                <li>Unordered list item</li>
             </ul>
+            <h4>Ordered list:</h4>
+            <ol>
+                <li>Ordered list item</li>
+                <li>Ordered list item</li>
+                <li>Ordered list item</li>
+            </ol>
+        </div>
+        <h4>Buttons:</h4>
+        <div>
+            <button type="button">Button 1</button>
+            <button type="button">Button 2</button>
+            <button type="button">Button 3</button>
         </div>
     </main>
 </body>
