Begins styling buttons

--- a/index.html
+++ b/index.html
@@ -7,33 +7,44 @@
     <title>DreamCSS Example Page</title>
 </head>
 <body>
+    <header>
+        <h1>Welcome to Dream CSS.</h1>
+        <p>Dream CSS is a lightweight, .... This framework was written and styled by Nathan Templeton, Dominic Corriveau, Alex Galsytan, and Matthew Montgomery.</p>
+    </header>
     <main>
-        <header>
-            <h1>Welcome to Dream CSS.</h1>
-            <p>Dream CSS is a lightweight, .... This framework was written and styled by Nathan Templeton, Dominic Corriveau, Alex Galsytan, and Matthew Montgomery.</p>
-        </header>
-        <div>
-            <h4>Headings and paragraphs:</h4>
-            <p>This is what a paragraph would look like using the dream CSS library.</p>
-            <h4>Unordered list:</h4>
-            <ul>
-                <li>Unordered list item</li>
-                <li>Unordered list item</li>
-                <li>Unordered list item</li>
-            </ul>
-            <h4>Ordered list:</h4>
-            <ol>
-                <li>Ordered list item</li>
-                <li>Ordered list item</li>
-                <li>Ordered list item</li>
-            </ol>
-        </div>
-        <h4>Buttons:</h4>
-        <div>
-            <button type="button">Button 1</button>
+        <section class="dr-py-md">
+            <h2>Headings, Paragraphs, and Lists:</h2>
+            <h3>Headings and Paragraphs</h3>
+            <div>
+                <p>This is what a paragraph would look like using the dream CSS library.</p>
+            </div>
+            <h3>Lists</h3>
+                <h4>Unordered list:</h4>
+                <ul>
+                    <li>Unordered list item</li>
+                    <li>Unordered list item</li>
+                    <li>Unordered list item</li>
+                </ul>
+                <h4>Ordered list:</h4>
+                <ol>
+                    <li>Ordered list item</li>
+                    <li>Ordered list item</li>
+                    <li>Ordered list item</li>
+                </ol>
+                <h4>Description list:</h4>
+                <dl>
+                    <dt>DreamCSS</dt>
+                    <dd>An amazing CSS framework</dd>
+                    <dt>Nathan, Dominic, Alex, Matthew</dt>
+                    <dd>A group of amazing developers</dd>
+                </dl>
+        </section>
+        <section>
+            <h2>Buttons:</h4>
+            <button type="button" class="dr-btn">Button 1</button>
             <button type="button">Button 2</button>
             <button type="button">Button 3</button>
-        </div>
+        </section>
     </main>
 </body>
 </html>
