Adds classes for different animations and hover states

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </div>
         <h4>Buttons:</h4>
         <div>
-            <button type="button">Button 1</button>
-            <button type="button">Button 2</button>
+            <button type="button"  class="dr-v-float">Button 3</button>
+            <button type="button" class="dr-float">Button 2</button>
             <button type="button">Button 3</button>
         </div>
     </main>
