Adds button classes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>DreamCSS Example Page</title>
 </head>
-<body>
+<body class="dr-default-theme-light">
     <header>
         <h1>Welcome to Dream CSS.</h1>
         <p>Dream CSS is a lightweight, .... This framework was written and styled by Nathan Templeton, Dominic Corriveau, Alex Galsytan, and Matthew Montgomery.</p>
@@ -41,10 +41,40 @@
         </section>
         <section>
             <h2>Buttons:</h4>
-            <button type="button" class="dr-btn">Button 1</button>
+            <button type="button" class="dr-btn-tp dr-btn-danger">Button 1</button>
             <button type="button">Button 2</button>
             <button type="button">Button 3</button>
         </section>
+        <!-- TABLE -->
+        <div class="dr-container-lg">
+            <h4 class="dr-mb-lg">Table:</h4>
+            <table class="dr-table">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Age</th>
+                        <th>Country</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Matthew</td>
+                        <td>24</td>
+                        <td>Canada</td>
+                    </tr>
+                    <tr>
+                        <td>Nathan</td>
+                        <td>??</td>
+                        <td>Canada</td>
+                    </tr>
+                    <tr>
+                        <td>Alex</td>
+                        <td>??</td>
+                        <td>??</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 </body>
 </html>
