Adds preview for everything and animation duration classses

--- a/index.html
+++ b/index.html
@@ -30,9 +30,17 @@
         </div>
         <h4>Buttons:</h4>
         <div>
-            <button type="button"  class="dr-v-float">Button 3</button>
+            <button type="button">Button 3</button>
             <button type="button" class="dr-float">Button 2</button>
             <button type="button">Button 3</button>
+        </div>
+        <div>
+            <h3>Animations</h3>
+            <p>You can use our preset float and fade in animations for hovers. You can also set different lengths for them.</p>
+            <button class="dr-v-float">Float 1</button>
+            <button class="dr-float">Float 2</button>
+            <button class="f1preview">Fade In 1</button>
+            <button class="f2preview">Fade In 2</button>
         </div>
     </main>
 </body>
